--- a/Uppgifter/backar/problem.yaml
+++ b/Uppgifter/backar/problem.yaml
@@ -1,4 +1,4 @@
-name: Backar i Göteborg
+name: Hills in Gothenburg
 author: Jonathan Lööv
 source: Chalmers Challenge 2021
 rights_owner: Chalmers Challenge 2021
