--- a/Uppgifter/antivirus/problem.yaml
+++ b/Uppgifter/antivirus/problem.yaml
@@ -3,3 +3,5 @@ source: Chalmers Challenge 2021
 rights_owner: Chalmers Challenge 2021
 license: cc by-sa
 type: pass-fail
+limits:
+    time_multiplier: 10
